<resources>
    <string name="app_name">SMK PUBLIK</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="welcome_smk_publik">WELCOME SMK PUBLIK</string>
    <string name="welcome_smk_publik_desc">sekolah ini menerapkan sistem pembelajaran E-learning\nsecara online menggunakan android</string>
    <string name="materi_pelajaran">MATERI PELAJARAN</string>
    <string name="materi_pelajaran_desc">belajar lebih simple,kreatif dan juga efisien</string>
    <string name="absensi_siswa">ABSENSI SISWA</string>
    <string name="absensi_siswa_desc">absensi siswa ini menggunakan finger dan tidak khawatir lagi bagi para wali murid untuk mengontrol kehadiran anak nya secara online</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome\nWin Hardian</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_absen_guru_dan_staff">Absen Guru Dan Staff</string>
    <string name="menu_absen_siswa">Absen Siswa</string>
    <string name="menu_materi_pelajaran">Materi Pelajaran</string>
    <string name="menu_ruang_chat">Ruang Chat</string>
    <string name="menu_informasi">Informasi Pendaftaran</string>
    <string name="menu_kegiatan_ekstrakurikuler">Kegiatan Ekstrakurikuler</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_kontak">Kontak</string>
    <string name="keluar">Keluar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
